test/functions/bradc/varFns/retLitFromVarFn.good
retLitFromVarFn.chpl:4: In function 'this':
retLitFromVarFn.chpl:6: error: var function returns constant value
